--- a/components/post/PostGrid.module.css
+++ b/components/post/PostGrid.module.css
@@ -1,10 +1,11 @@
-
-
-
 .container {
-
-    display:grid;
-    grid-template-columns:repeat(auto-fit,220px);
-    grid-gap:8px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 220px);
+  grid-gap: 8px;
 }
-    
+
+@media screen and (max-width: 463px) {
+  .container {
+    justify-content: center;
+  }
+}
